[package]
name = "aegis-vault"
version = "0.1.0"
description = "Aegis Funding Vault — programmable funding layer on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aegis_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
